CustomObjects/objects/invoiceit_s__Batch_Jobs__c.object
<CustomObject>
    <description>This holds the records for batch process of MRR and Renew Orders</description>
    <fields>
        <fullName>invoiceit_s__Completed_Date_and_Time__c</fullName>
        <label>Completed Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Exception_Log__c</fullName>
        <label>Exception Log</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Start_Date_and_Time__c</fullName>
        <label>Start Date and Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>invoiceit_s__Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Started</fullName>
                </value>
                <value>
                    <fullName>Processing</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Completed with errors</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>invoiceit_s__Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>MRR Calculation</fullName>
                </value>
                <value>
                    <fullName>Auto Renewals</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>SteelBrick Batch Jobs</label>
    <listViews>
        <fullName>invoiceit_s__All_Batch_Jobs</fullName>
        <columns>NAME</columns>
        <columns>invoiceit_s__Type__c</columns>
        <columns>invoiceit_s__Status__c</columns>
        <columns>invoiceit_s__Start_Date_and_Time__c</columns>
        <columns>invoiceit_s__Completed_Date_and_Time__c</columns>
        <columns>invoiceit_s__Exception_Log__c</columns>
        <filterScope>Everything</filterScope>
        <label>All Batch Jobs</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Invoice IT Batch Jobs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>